--- a/demo/src/app/customers/customer.component.html
+++ b/demo/src/app/customers/customer.component.html
@@ -8,22 +8,36 @@
               novalidate
               (ngSubmit)="save(signupForm)"
               #signupForm="ngForm">
+            <!--
+            novalidate means we don't want HTML to do any validation. Instead, hand it over to Angular
+
+            #signupForm="ngForm": set the formTemplate variable to the form model
+            -->
+
             <fieldset>
                 <div class="form-group"
                     [ngClass]="{'has-error': (firstNameVar.touched || firstNameVar.dirty) && !firstNameVar.valid }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-2 control-label"
                            for="firstNameId">First Name</label>
 
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="firstNameId" 
-                               type="text" 
-                               placeholder="First Name (required)" 
-                               required 
+                        <input class="form-control"
+                               id="firstNameId"
+                               type="text"
+                               placeholder="First Name (required)"
+                               required
                                minlength="3"
                                [(ngModel)]=customer.firstName
                                name="firstName"
                                #firstNameVar="ngModel" />
+                      <!--
+                      name="firstName" is requited for two-way binding [(ngModel)]=customer.firstName
+                      value of name attribute, "firstName" here, becomes an attribute of signupForm.value
+
+                      #firstNameVar="ngModel": capture the input value of firstName with ngModel for validation styling and messages
+                      firstNameVar is a template reference variable that can be used inside the form
+                      -->
+
                         <span class="help-block" *ngIf="(firstNameVar.touched || firstNameVar.dirty) && firstNameVar.errors">
                             <span *ngIf="firstNameVar.errors.required">
                                 Please enter your first name.
@@ -32,20 +46,24 @@
                                 The first name must be longer than 3 characters.
                             </span>
                         </span>
+                      <!--
+                      Notice the errors: firstNameVar.errors.minlength and firstNameVar.errors.required
+                      The two error attribute names match the validation attribute we placed on the HTML elements
+                      -->
                     </div>
                 </div>
 
                 <div class="form-group"
                     [ngClass]="{'has-error': (lastNameVar.touched || lastNameVar.dirty) && !lastNameVar.valid }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-2 control-label"
                         for="lastNameId">Last Name</label>
 
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="lastNameId" 
-                               type="text" 
-                               placeholder="Last Name (required)" 
-                               required 
+                        <input class="form-control"
+                               id="lastNameId"
+                               type="text"
+                               placeholder="Last Name (required)"
+                               required
                                maxlength="50"
                                [(ngModel)]="customer.lastName"
                                name="lastName"
@@ -60,14 +78,14 @@
 
                 <div class="form-group"
                     [ngClass]="{'has-error': (emailVar.touched || emailVar.dirty) && !emailVar.valid }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-2 control-label"
                         for="emailId">Email</label>
 
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="emailId" 
-                               type="email" 
-                               placeholder="Email (required)" 
+                        <input class="form-control"
+                               id="emailId"
+                               type="email"
+                               placeholder="Email (required)"
                                required
                                pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+"
                                [(ngModel)]="customer.email"
@@ -100,7 +118,7 @@
                         </label>
                     </div>
                 </div>
-                
+
                 <div *ngIf="customer.sendCatalog">
                     <div class="form-group" >
                         <label class="col-md-2 control-label">Address Type</label>
@@ -124,12 +142,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-md-2 control-label" 
+                        <label class="col-md-2 control-label"
                             for="street1Id">Street Address 1</label>
                         <div class="col-md-8">
-                            <input type="text" 
-                                   class="form-control" 
-                                   id="street1Id" 
+                            <input type="text"
+                                   class="form-control"
+                                   id="street1Id"
                                    placeholder="Street address"
                                    [(ngModel)]="customer.street1"
                                    name="street1">
@@ -137,11 +155,11 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-md-2 control-label" 
+                        <label class="col-md-2 control-label"
                             for="street2Id">Street Address 2</label>
                         <div class="col-md-8">
-                            <input type="text" 
-                                   class="form-control" 
+                            <input type="text"
+                                   class="form-control"
                                    id="street2Id"
                                    placeholder="Street address (second line)"
                                    [(ngModel)]="customer.street2"
@@ -150,12 +168,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-md-2 control-label" 
+                        <label class="col-md-2 control-label"
                             for="cityId">City, State, Zip Code</label>
                         <div class="col-md-3">
-                            <input type="text" 
-                                   class="form-control" 
-                                   id="cityId" 
+                            <input type="text"
+                                   class="form-control"
+                                   id="cityId"
                                    placeholder="City"
                                    [(ngModel)]="customer.city"
                                    name="city">
@@ -178,8 +196,8 @@
                         </div>
                         <div class="col-md-2">
                         <input type="number"
-                                   class="form-control" 
-                                   id="zipId" 
+                                   class="form-control"
+                                   id="zipId"
                                    placeholder="Zip Code"
                                    [(ngModel)]="customer.zip"
                                    name="zip">
@@ -202,7 +220,7 @@
         </form>
     </div>
 </div>
-<br>Dirty: {{ signupForm.dirty }} 
+<br>Dirty: {{ signupForm.dirty }}
 <br>Touched: {{ signupForm.touched }}
 <br>Valid: {{ signupForm.valid }}
 <br>Value: {{ signupForm.value | json }}
