--- a/demo/src/app/customers/customer.component.html
+++ b/demo/src/app/customers/customer.component.html
@@ -6,17 +6,16 @@
     <div class="panel-body">
         <form class="form-horizontal"
               novalidate
-              (ngSubmit)="save(signupForm)"
-              #signupForm="ngForm">
+              (ngSubmit)="save()"
+              [formGroup]="customerForm">
             <!--
             novalidate means we don't want HTML to do any validation. Instead, hand it over to Angular
-
-            #signupForm="ngForm": set the formTemplate variable to the form model
+            Use property binding for formGroup to bind the form model
             -->
 
             <fieldset>
                 <div class="form-group"
-                    [ngClass]="{'has-error': (firstNameVar.touched || firstNameVar.dirty) && !firstNameVar.valid }">
+                    [ngClass]="{'has-error': (customerForm.get('firstName').touched || customerForm.get('firstName').dirty) && !customerForm.get('firstName').valid }">
                     <label class="col-md-2 control-label"
                            for="firstNameId">First Name</label>
 
@@ -27,22 +26,16 @@
                                placeholder="First Name (required)"
                                required
                                minlength="3"
-                               [(ngModel)]=customer.firstName
-                               name="firstName"
-                               #firstNameVar="ngModel" />
+                               formControlName="firstName" />
                       <!--
-                      name="firstName" is requited for two-way binding [(ngModel)]=customer.firstName
-                      value of name attribute, "firstName" here, becomes an attribute of signupForm.value
-
-                      #firstNameVar="ngModel": capture the input value of firstName with ngModel for validation styling and messages
-                      firstNameVar is a template reference variable that can be used inside the form
+                      Use formControlName attribute to bind this input element to firstName formControl variable
                       -->
 
-                        <span class="help-block" *ngIf="(firstNameVar.touched || firstNameVar.dirty) && firstNameVar.errors">
-                            <span *ngIf="firstNameVar.errors.required">
+                        <span class="help-block" *ngIf="(customerForm.get('firstName').touched || customerForm.get('firstName').dirty) && customerForm.get('firstName').errors">
+                            <span *ngIf="customerForm.get('firstName').errors.required">
                                 Please enter your first name.
                             </span>
-                            <span *ngIf="firstNameVar.errors.minlength">
+                            <span *ngIf="customerForm.get('firstName').errors.minlength">
                                 The first name must be longer than 3 characters.
                             </span>
                         </span>
@@ -54,7 +47,7 @@
                 </div>
 
                 <div class="form-group"
-                    [ngClass]="{'has-error': (lastNameVar.touched || lastNameVar.dirty) && !lastNameVar.valid }">
+                    [ngClass]="{'has-error': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }">
                     <label class="col-md-2 control-label"
                         for="lastNameId">Last Name</label>
 
@@ -65,11 +58,9 @@
                                placeholder="Last Name (required)"
                                required
                                maxlength="50"
-                               [(ngModel)]="customer.lastName"
-                               name="lastName"
-                               #lastNameVar="ngModel" />
-                        <span class="help-block" *ngIf="(lastNameVar.touched || lastNameVar.dirty) && lastNameVar.errors">
-                            <span *ngIf="lastNameVar.errors.required">
+                               formControlName="lastName" />
+                        <span class="help-block" *ngIf="(customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && customerForm.get('lastName').errors">
+                            <span *ngIf="customerForm.get('lastName').errors.required">
                                 Please enter your last name.
                             </span>
                         </span>
@@ -77,7 +68,7 @@
                 </div>
 
                 <div class="form-group"
-                    [ngClass]="{'has-error': (emailVar.touched || emailVar.dirty) && !emailVar.valid }">
+                    [ngClass]="{'has-error': (customerForm.get('email').touched || customerForm.get('email').dirty) && !customerForm.get('email').valid }">
                     <label class="col-md-2 control-label"
                         for="emailId">Email</label>
 
@@ -88,19 +79,17 @@
                                placeholder="Email (required)"
                                required
                                pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+"
-                               [(ngModel)]="customer.email"
-                               name="email"
-                               #emailVar="ngModel" />
-                        <span class="help-block" *ngIf="(emailVar.touched || emailVar.dirty) && emailVar.errors">
-                            <span *ngIf="emailVar.errors.required">
+                               formControlName="email" />
+                        <span class="help-block" *ngIf="(customerForm.get('email').touched || customerForm.get('email').dirty) && customerForm.get('email').errors">
+                            <span *ngIf="customerForm.get('email').errors.required">
                                 Please enter your email address.
                             </span>
-                            <span *ngIf="emailVar.errors.pattern">
+                            <span *ngIf="customerForm.get('email').errors.pattern">
                                 Please enter a valid email address.
                             </span>
 
                             <!-- This one does not work -->
-                            <span *ngIf="emailVar.errors.email">
+                            <span *ngIf="customerForm.get('email').errors.email">
                                 Please enter a valid email address.
                             </span>
                         </span>
@@ -112,13 +101,12 @@
                         <label>
                             <input id="sendCatalogId"
                                    type="checkbox"
-                                   [(ngModel)]="customer.sendCatalog"
-                                   name="sendCatalog" >
+                                   formControlName="sendCatalog" >
                             Send me your catalog
                         </label>
                     </div>
                 </div>
-
+<!--
                 <div *ngIf="customer.sendCatalog">
                     <div class="form-group" >
                         <label class="col-md-2 control-label">Address Type</label>
@@ -204,13 +192,13 @@
                         </div>
                     </div>
                 </div>
-
+-->
                 <div class="form-group">
                     <div class="col-md-4 col-md-offset-2">
                         <span>
                             <button class="btn btn-primary"
                                     type="submit"
-                                    [disabled]="!signupForm.valid">
+                                    [disabled]="!customerForm.valid">
                                 Save
                             </button>
                         </span>
@@ -220,7 +208,7 @@
         </form>
     </div>
 </div>
-<br>Dirty: {{ signupForm.dirty }}
-<br>Touched: {{ signupForm.touched }}
-<br>Valid: {{ signupForm.valid }}
-<br>Value: {{ signupForm.value | json }}
+<br>Dirty: {{ customerForm.dirty }}
+<br>Touched: {{ customerForm.touched }}
+<br>Valid: {{ customerForm.valid }}
+<br>Value: {{ customerForm.value | json }}
