--- a/demo/src/app/customers/customer.component.html
+++ b/demo/src/app/customers/customer.component.html
@@ -64,6 +64,49 @@
                 </div>
 
                 <div class="form-group"
+                     [ngClass]="{'has-error': !customerForm.get('phone').valid}">
+                    <label class="col-md-2 control-label"
+                           for="phoneId">Phone</label>
+
+                    <div class="col-md-8">
+                        <input class="form-control"
+                               id="phoneId"
+                               type="tel"
+                               placeholder="Phone"
+                               formControlName="phone"
+                        >
+                        <span *ngIf="customerForm.get('phone').errors">
+                            <span *ngIf="customerForm.get('phone').errors.required">
+                                Please enter your phone number.
+                            </span>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label">Send Notifications</label>
+                    <div class="col-md-8">
+                        <label>
+                            <input class="radio-inline"
+                                   type="radio"
+                                   value="email"
+                                   formControlName="notification"
+                                   (click)="setNotification('email')"
+                            >
+                            Email
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio"
+                                   value="text"
+                                   formControlName="notification"
+                                   (click)="setNotification('text')"
+                            >
+                            Text
+                        </label>
+                    </div>
+                </div>
+
+                    <div class="form-group"
                     [ngClass]="{'has-error': (customerForm.get('email').touched || customerForm.get('email').dirty) && !customerForm.get('email').valid }">
                     <label class="col-md-2 control-label"
                         for="emailId">Email</label>
@@ -196,6 +239,7 @@
                                 Save
                             </button>
                         </span>
+                        <!--
                         <span>
                             <button class="btn btn-primary"
                                     type="button"
@@ -210,6 +254,7 @@
                                 Populate only emails fields
                             </button>
                         </span>
+                        -->
                     </div>
                 </div>
             </fieldset>
