--- a/demo/src/app/customers/customer.component.html
+++ b/demo/src/app/customers/customer.component.html
@@ -136,6 +136,29 @@
                     </div>
                 </div>
 
+                <div class="form-group"
+                     [ngClass]="{'has-error': (customerForm.get('rating').touched ||
+                                              customerForm.get('rating').dirty) &&
+                                              !customerForm.get('rating').valid }">
+                    <label class="col-md-2 control-label"
+                           for="ratingId">Rating</label>
+
+                    <div class="col-md-8">
+                        <input class="form-control"
+                               id="ratingId"
+                               type="number"
+                               formControlName="rating"/>
+                        <span class="help-block" *ngIf="(customerForm.get('rating').touched
+                                                         || customerForm.get('rating').dirty) &&
+                                                         customerForm.get('rating').errors">
+                            <!-- Note the validator name is the name of the custom validator function (range) -->
+                             <span *ngIf="customerForm.get('rating').errors.range">
+                                Please rate your experience from 1 to 5.
+                            </span>
+                       </span>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <div class="col-md-offset-1 col-md-8 checkbox">
                         <label>
