--- a/demo/src/app/customers/customer.component.html
+++ b/demo/src/app/customers/customer.component.html
@@ -151,7 +151,7 @@
                         <span class="help-block" *ngIf="(customerForm.get('rating').touched
                                                          || customerForm.get('rating').dirty) &&
                                                          customerForm.get('rating').errors">
-                            <!-- Note the validator name is the name of the custom validator function (range) -->
+                            <!-- Note the validator name is the name of the returned rule ('range') -->
                              <span *ngIf="customerForm.get('rating').errors.range">
                                 Please rate your experience from 1 to 5.
                             </span>
