Fix minor styling issue

--- a/demo/src/app/customers/customer.component.html
+++ b/demo/src/app/customers/customer.component.html
@@ -88,9 +88,8 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Send Notifications</label>
                     <div class="col-md-8">
-                        <label>
-                            <input class="radio-inline"
-                                   type="radio"
+                        <label class="radio-inline">
+                            <input type="radio"
                                    value="email"
                                    formControlName="notification"
                                    (click)="setNotification('email')"
